crates/toml_edit/tests/snapshots/invalid/local-date/mday-over.stderr
TOML parse error at line 3, column 5
  |
3 | d = 2006-01-32
  |     ^^^^^^^^^^
invalid date, expected day between 01 and 31
